--- a/templates/shortcodes/icon.html
+++ b/templates/shortcodes/icon.html
@@ -1,12 +1,2 @@
-{%- import "macros/icon.html" as icon -%}
-{% if type == "warning" %}
-{{ icon::warning(class="") }}
-{% elif type == "instagram" %}
-{{ icon::instagram(class="") }}
-{% elif type == "youtube" %}
-{{ icon::youtube(class="") }}
-{% elif type == "email" %}
-{{ icon::email(class="") }}
-{% elif type == "phone" %}
-{{ icon::phone(class="") }}
-{% endif %}
+{%- import "macros/content.html" as content -%}
+{{ content::icon(id=type) }}
