--- a/templates/shortcodes/badge_success.html
+++ b/templates/shortcodes/badge_success.html
@@ -1,5 +1,5 @@
-{%- import "macros/icon.html" as icon -%}
+{%- import "macros/content.html" as content -%}
 <div class="badge badge-success">
-    {% if icon %}{{ icon::success(class="") }}{% endif %}
+    {% if icon %}{{ content::icon(id="success") }}{% endif %}
     <span>{{ body }}</span>
 </div>
