--- a/templates/shortcodes/badge_warning.html
+++ b/templates/shortcodes/badge_warning.html
@@ -1,5 +1,5 @@
-{%- import "macros/icon.html" as icon -%}
+{%- import "macros/content.html" as content -%}
 <div class="badge badge-warning">
-    {% if icon %}{{ icon::warning(class="") }}{% endif %}
+    {% if icon %}{{ content::icon(id="warning") }}{% endif %}
     <span>{{ body }}</span>
 </div>
