--- a/templates/taxonomy_list.html
+++ b/templates/taxonomy_list.html
@@ -8,7 +8,7 @@
     <div class="flex grid-flow-row space-x-6 pl-1 mb-2">
     {% for term in terms %}
     <span class="flex items-center whitespace-nowrap">
-    {{ icon::tag() }}<a href="{{ config.base_url | safe }}{{term.path }}">{{ term.name }}</a><sup>{{ term.pages | length }}</sup>
+    {{ content::icon(id="tag", icons=icons) }}<a href="{{ config.base_url | safe }}{{term.path }}">{{ term.name }}</a><sup>{{ term.pages | length }}</sup>
     </span>
     {% endfor %}
     </div>
