--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -4,7 +4,7 @@
 
 <div class="flex flex-col items-center">
     <h1 class="">{{ term.name | title }}</h1>
-    {{ content::cards(pages=paginator.pages, i18n=i18n) }}
+    {{ content::cards(pages=paginator.pages, i18n=i18n, icons=icons) }}
 </div>
 
 {% endblock %}
