--- a/templates/taxonomy_list.html
+++ b/templates/taxonomy_list.html
@@ -7,9 +7,7 @@
 
     <div class="flex grid-flow-row space-x-6 pl-1 mb-2">
     {% for term in terms %}
-    <span class="flex items-center whitespace-nowrap">
-    {{ content::icon(id="tag", icons=icons) }}<a href="{{ config.base_url | safe }}{{term.path }}">{{ term.name }}</a><sup>{{ term.pages | length }}</sup>
-    </span>
+    {{ content::term(term=term, icons=icons)}}
     {% endfor %}
     </div>
 </div>
