--- a/templates/base.html
+++ b/templates/base.html
@@ -143,7 +143,7 @@
                         <div class="search-results__items"></div>
                     </div>
 
-                    <div class="py-8">
+                    <div class="pb-8">
                     {% block content %}
                     {% endblock content %}
                     </div>
