--- a/templates/section.html
+++ b/templates/section.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="flex flex-col items-center">
+<div class="flex flex-col items-center mt-10">
     <h1>{{ section.title }}</h1>
     <p>{{ section.content | safe }}</p>
 
