--- a/templates/taxonomy_list.html
+++ b/templates/taxonomy_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="flex flex-col items-center">
+<div class="flex flex-col items-center mt-10">
     <h1>{{ taxonomy.name | title }}</h1>
 
     <div class="flex grid-flow-row space-x-6 pl-1 mb-2">
