--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<div class="flex flex-col items-center">
+<div class="flex flex-col items-center mt-10 ">
     <h1 class="">{{ term.name | title }}</h1>
-    {{ content::cards(pages=paginator.pages, i18n=i18n, icons=icons) }}
+    <p>{{ content::cards(pages=paginator.pages, i18n=i18n, icons=icons) }}</p>
 </div>
 
 {% endblock %}
