--- a/templates/macros/content.html
+++ b/templates/macros/content.html
@@ -84,6 +84,7 @@
             <a href="{{ page.permalink }}" class="no-underline">
                 <h2 class="card-title">{{ page.title }}</h2>
             </a>
+
             <!-- Metadata (date and authors) -->
             <div class="flex flex-wrap space-x-6 pl-1 mb-2">
                 {% if page.date %}
@@ -101,7 +102,23 @@
                 </span>
                 {% endif %}
             </div>
+
             {% if page.summary %}{{ page.summary | safe }}{% else %}<p>{{ page.description }}</p>{% endif %}
+
+            {# Show all taxonomy elements, if there are any #}
+            {% if page.taxonomies | length > 0 %}
+            <div class="flex flex-wrap space-x-6 pl-1 mb-2">
+            {% for taxonomy, elements in page.taxonomies %}
+            {% for element in elements %}
+            <span class="flex items-center whitespace-nowrap">
+                {{ content::icon(id="tag", icons=icons) }}
+                <a href="{{ get_taxonomy_url(kind=taxonomy, name=element, lang=lang) }}" class="no-underline hover:underline">{{ element }}</a>
+            </span>
+            {% endfor %}
+            {% endfor %}
+            </div>
+            {% endif %}
+
             <div class="card-actions justify-end">
                 <a href="{{ page.permalink }}" class="btn btn-secondary">{{ i18n.read }}</a>
             </div>
