--- a/templates/page.html
+++ b/templates/page.html
@@ -22,7 +22,7 @@
 <h1>{{ page.title}}</h1>
 
 {# Metadata (date, authors, word count, read time, tags) #}
-<div class="flex flex-wrap space-x-6 pl-1 mb-4">
+<div class="flex flex-wrap space-x-6 gap-y-2 pl-1 mb-4">
     {% if page.date %}
     <span class="flex items-center whitespace-nowrap">
         {{ content::icon(id="calendar", icons=icons) }}
