--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,9 @@
     <title>{% block title %}{% if page.title %}{{ page.title }} | {% endif %}{{ config.title }}{% endblock title %}</title>
 
     <!-- meta data -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ config.description }}{% endif %}" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ config.description }}{% endif %}">
 
     <!-- stylesheets, fonts, feeds -->
     {{ content::include_stylesheet(file="css/main.css") }}
@@ -28,10 +28,10 @@
     <!-- favicon -->
     {% if config.extra.favicon.svg %}<link rel="icon" href="{{ config.base_url | safe }}/{{ config.extra.favicon.svg }}" type="image/svg+xml">{% endif %}
 
-    {% if config.extra.daisyui_theme_light or config.extra.daisyui_theme_dark %}
+    {% if config.extra.daisyui_theme_light or config.extra.daisyui_theme_dark -%}
     <!-- java script for setting theme as saved in local storage (needs to be inline to avoid flicker) -->
     <script>
-        {% if config.extra.daisyui_theme_light and config.extra.daisyui_theme_dark %}
+        {% if config.extra.daisyui_theme_light and config.extra.daisyui_theme_dark -%}
         // select default theme based on preferred color scheme (as set in the browser)
         if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
             default_theme = '{{ config.extra.daisyui_theme_dark }}'
@@ -62,31 +62,21 @@
     </script>
     {%- endif %}
 
-    <script>
-        // execute code after the DOM content was loaded
-        document.addEventListener("DOMContentLoaded", function (event) {
-            // unhide elements that only work with java script being enabled (they are marked with 'needs-script')
-            document.querySelectorAll("[needs-script]").forEach(el => {
-                el.classList.remove("hidden")
-            })
-        })
-    </script>
-
-    {% block extra_headers %}{% endblock %}
+    {%- block extra_headers -%}{%- endblock %}
 </head>
 
 <body class="h-screen">
     <div class="@container drawer min-h-full">
-        <input id="main-drawer" type="checkbox" class="drawer-toggle lg:hidden" />
+        <input id="main-drawer" type="checkbox" class="drawer-toggle lg:hidden">
         <div class="drawer-content flex min-h-full flex-col"><!-- to expand over the full screen even on short pages -->
             <header class="sticky top-0 z-50 text-primary-content bg-primary shadow-sm opacity-93">
                 <div class="navbar">
                 <div class="navbar-start">
-                    {% if config.title %}<a class="btn btn-ghost hover:bg-primary-content hover:text-primary text-xl" href="/{% if lang != config.default_language%}{{ lang }}{% endif %}">{{ config.title }}</a>{% endif %}
+                    {% if config.title %}<a class="btn btn-ghost hover:bg-primary-content hover:text-primary text-xl" href="{{ config.base_url | safe }}{% if lang != config.default_language%}/{{ lang }}{% endif %}">{{ config.title }}</a>{% endif %}
                 </div>
                 <div class="navbar-center max-lg:hidden lg:flex">
                     <ul class="menu menu-horizontal px-1 gap-x-2">
-                        {% if config.extra.navbar.links %}
+                        {% if config.extra.navbar.links -%}
                         {% for link in config.extra.navbar.links %}
                         <li>{{ content::navbar_button(url=link.url, text=i18n[link.i18n_key], text_class="") }}</li>
                         {# <li><a class="hover:bg-primary-content hover:text-primary no-underline px-3 rounded-md" href="{{ config.base_url | safe }}{% if lang != config.default_language and not link.no_translation %}/{{ lang }}{% endif %}/{{ link.url}}">{{ i18n[link.i18n_key] }}</a></li> #}
@@ -95,7 +85,7 @@
                     </ul>
                 </div>
                 <div class="navbar-end">
-                    {% if config.extra.enable_theme_switching %}{{ themes::theme_dropdown(button=content::icon(id="themes", icons=icons), label=i18n.theme) }}{% endif %}
+                    {%- if config.extra.enable_theme_switching %}{{ themes::theme_dropdown(button=content::icon(id="themes", icons=icons), label=i18n.theme) }}{% endif %}
                     {% if config.languages | length > 0 %}
                     <div class="dropdown dropdown-end max-lg:hidden">
                         <div tabindex="0" title="{{ i18n.change_language }}" role="button" class="btn btn-ghost rounded-field hover:bg-primary-content hover:text-primary">{{ content::icon(id="translate", icons=icons) }}</div>
@@ -111,18 +101,17 @@
                     <div class="max-md:hidden">
                         <label tabindex="0" class="input text-primary bg-primary-content focus:outline-teal-500">
                             {{ content::icon(id="search", class="h-[1em] opacity-50", icons=icons) }}
-                            <input id="desktop-search" type="search" class="search-input grow" placeholder="{{ i18n.search }}" />
+                            <input id="desktop-search" type="search" class="search-input grow" placeholder="{{ i18n.search }}">
                             <kbd class="kbd kbd-sm bg-primary text-primary-content">⌘</kbd>
                             <kbd class="kbd kbd-sm bg-primary text-primary-content">K</kbd>
                         </label>
                     </div>
-                    <button id="search-button" for="search-bar" aria-label="open search" class="btn btn-square btn-ghost swap swap-rotate hover:bg-primary-content hover:text-primary md:hidden">
+                    <label id="search-button" for="search-bar" aria-label="open search" class="btn btn-square btn-ghost swap swap-rotate hover:bg-primary-content hover:text-primary md:hidden">
                         {{ content::icon(id="search", icons=icons) }}
-                    </button>
+                    </label>
                     {% endif %}
                     {% if config.extra.navbar.links or config.extra.enable_theme_switching or config.languages | length > 0 -%}
                     <label for="main-drawer" aria-label="open sidebar" class="btn btn-square btn-ghost swap swap-rotate hover:bg-primary-content hover:text-primary lg:hidden">
-                        <input type="checkbox" />
                         {{ content::icon(id="list", class="h-6 w-6 swap-off [:checked~*_&]:!-rotate-45 [:checked~*_&]:!opacity-0", icons=icons) }}
                         {{ content::icon(id="x", class="h-5 w-5 swap-on [:checked~*_&]:!rotate-0 [:checked~*_&]:!opacity-100", icons=icons) }}
                     </label>
@@ -132,7 +121,7 @@
                 <div id="search-bar" class="hidden md:hidden pl-2 pr-2 pb-2">
                     <label tabindex="0" class="input text-primary bg-primary-content w-full">
                         {{ content::icon(id="search", class="h-[1em] opacity-50", icons=icons) }}
-                        <input id="mobile-search" type="search" class="search-input grow" placeholder="{{ i18n.search }}" />
+                        <input id="mobile-search" type="search" class="search-input grow" placeholder="{{ i18n.search }}">
                     </label>
                 </div>
             </header>
@@ -195,9 +184,9 @@
                 {{ content::drawer_button(url=link.url, text=i18n[link.i18n_key]) }}
                 {% endfor %}
                 {% endif %}
-                <hr class="mt-2 mb-2" />
+                <hr class="mt-2 mb-2">
                 {% if config.languages | length > 0 %}
-                <li><details close>
+                <li><details>
                     <summary class="">{{ i18n.language }}</summary>
                     <ul>
                         <li><a href="{% if page %}{{ page.permalink }}{% else %}{% endif %}" class="no-underline menu-active">{{ i18n.language_name }}</a></li>
@@ -208,7 +197,7 @@
                 </details></li>
                 {% endif %}
                 {% if config.extra.enable_theme_switching %}
-                <li needs-script class="hidden"><details close>
+                <li><details>
                     <summary class="">{{ i18n.theme }}</summary>
                     <ul>
                         {% for theme in config.extra.themes %}
