--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -2,9 +2,12 @@
 
 {% block content %}
 
+{# The taxonomy might be paginated or not, depending on the parameter in the index.md file. #}
+{% if paginator %}{% set pages = paginator.pages %}{% else %}{% set pages = term.pages %}{% endif %}
+
 <div class="flex flex-col items-center mt-10">
     <h1 class="">{{ term.name | title }}</h1>
-    <p>{{ content::cards(pages=paginator.pages, i18n=i18n, icons=icons) }}</p>
+    <p>{{ content::cards(pages=pages, i18n=i18n, icons=icons) }}</p>
 </div>
 
 {% endblock %}
